<resources>
    <string name="app_name">Recursos Humanos</string>
    <string name="label_login">Inicio de sesión</string>
    <string name="label_e_mail">Correo</string>
    <string name="label_password">Contraseña</string>
    <string name="label_ingresar">Ingresar</string>
    <string name="label_go_to_register">Aun no te has registrado?</string>
    <string name="label_register">Registro</string>
    <string name="label_name">Nombre completo</string>
    <string name="button_register">Registrar</string>
    <string name="label_go_to_login">Ya tiene una cuenta?</string>
    <string name="please_fill_your_data">Por Favor completa tus datos</string>
    <string name="btn_create_appointment">Reservar Cita</string>
    <string name="btn_my_appointments">Mis citas</string>
    <string name="btn_log_out">CERRAR SESION</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="label_create_appointment">Reservar cita</string>
    <string name="label_description">Descripción</string>
    <string name="label_speciality">Especialidad</string>
    <string name="label_type">Tipo de cita</string>
    <string name="type1">Consulta</string>
    <string name="type2">Examen</string>
    <string name="type3">Operación</string>
    <string name="btn_next">Siguiente</string>
    <string name="label_doctor">Médico</string>
    <string name="label_schedule_date">Fecha para la cita</string>
    <string name="btn_confirm">Confirmar registro</string>

    <string name="date_format">%1$d-%2$s-%3$s</string>
    <string name="item_appointment_id">Cita médica %1$d</string>
    <string name="item_appointment_date">Atención el día %1$s</string>
    <string name="item_appointment_time">A las %1$s</string>
    <string name="label_my_appointments">Mis citas médicas</string>
    <string name="press_back_again">Presione una vez más para salir!</string>
    <string name="dialog_create_appointment_exit_title">¿Estás seguro de salir?</string>
    <string name="dialog_create_appointment_exit_message">Si abandonas, los datos se perderán!</string>
    <string name="dialog_create_appointment_exit_positive_btn">Si, salir!</string>
    <string name="dialog_create_appointment_exit_negative_btn">Continuar...</string>
    <string name="validate_appointment_description">La descripción es demasiado corta!</string>
    <string name="label_schedule_time">Hora de la cita médica</string>
    <string name="label_confirm_appointment_data">Datos de la cita:</string>


</resources>
