<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".MenuActivity">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:gravity="center_horizontal"
        android:text="@string/label_welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


    <Button
        android:id="@+id/btnCreateAppointment"
        style="@style/MenuBotton"
        android:layout_width="match_parent"
        android:layout_marginTop="18dp"
        android:drawableStart="@drawable/ic_add_circle"
        android:text="@string/btn_create_appointment"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnMyAppointments"
        style="@style/MenuBotton"
        android:layout_width="match_parent"
        android:layout_marginTop="18dp"
        android:drawableStart="@drawable/ic_schedule_black_24dp"
        android:text="@string/btn_my_appointments"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnLogout"
        style="@style/MenuBotton"
        android:layout_width="match_parent"
        android:layout_marginTop="18dp"
        android:drawableStart="@drawable/ic_power_off"
        android:text="@string/btn_log_out"
        android:textColor="@color/black" />



</LinearLayout>