<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:animateLayoutChanges="true"
    tools:context=".CreateAppointmentActivity">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:gravity="center_horizontal"
        android:text="@string/label_create_appointment"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvStep1"
        app:contentPadding="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.core.widget.NestedScrollView

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/label_description" />


                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_especiality" />

                <Spinner
                    android:id="@+id/spinnerSpecialities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_type" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:checked="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/type1" />

                    <RadioButton

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/type2" />

                    <RadioButton

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/type3" />
                </RadioGroup>


                <Button
                    android:id="@+id/btnNext"
                    style="@style/MenuBotton"
                    android:layout_width="match_parent"
                    android:layout_marginTop="18dp"
                    android:drawableEnd="@drawable/ic_navigate_next"
                    android:text="@string/btn_next"
                    android:textColor="@color/black" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/cvStep2"
        android:visibility="gone"

        app:contentPadding="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_doctor" />


                <Spinner
                    android:id="@+id/spinnerDoctors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_schedule_date" />


                <EditText
                    android:id="@+id/etScheduledDate"
                    android:onClick="onClickScheduledDate"

                    android:inputType="date"
                    android:focusable="false"
                    android:clickable="true"
                    android:maxLines="1"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/radioGroupLeft"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <RadioButton

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="8:00 AM" />

                        <RadioButton

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="8:30 AM" />

                        <RadioButton

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="9:00 AM" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/radioGroupRight"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <RadioButton

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="8:00 AM" />

                        <RadioButton

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="8:30 AM" />

                        <RadioButton

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="9:00 AM" />
                    </LinearLayout>


                </LinearLayout>


                <Button
                    android:id="@+id/btnConfirmAppointment"
                    style="@style/MenuBotton"
                    android:layout_width="match_parent"
                    android:layout_marginTop="18dp"
                    android:drawableEnd="@drawable/ic_check"
                    android:text="@string/btn_confirm"
                    android:textColor="@color/black" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>









</LinearLayout>